# sparkinfer

./: CONTRIBUTING.md
bench/scripts/: README.md  _common.sh  accuracy.sh  accuracy_compare.py  bench.sh  eval_text.txt  evaluate.sh
configs/: qwen35_35b_a3b.yaml
csrc/cuda/attention/: flash_decode_global_hd512.cu  flash_decode_local_hd256.cu
csrc/cuda/moe/: expert_ffn_q4k.cu
dashboard/: data.js  data.json
eval/: README.md  pr_eval_bot.py  run_sync_cron.sh  vast_eval.py
include/blackwell/kernels/: attention.h
include/sparkinfer/kernels/: moe.h
kernels/csrc/cuda/attention/: flash_prefill.cu  rope.cu
kernels/csrc/cuda/fused/: model_ops.cu
kernels/csrc/cuda/gemm/: gemv.cu
kernels/csrc/cuda/moe/: expert_ffn_q4k.cu  router.cu
kernels/include/sparkinfer/kernels/: attention.h  fused.h
runtime/: CMakeLists.txt
runtime/examples/: qwen3_gguf_bench.cpp  qwen3_gguf_generate.cpp  thermal_sweep.cpp
runtime/include/sparkinfer/: gpu_stats.h  runtime.h  thermal_governor.h
runtime/include/sparkinfer/models/: qwen35.h
runtime/src/: gpu_stats.cpp  runtime.cpp  thermal_governor.cpp
runtime/src/models/: qwen35.cpp
runtime/tests/: CMakeLists.txt  thermal_governor_cpu_test.cpp
src/models/: qwen35.cpp
